<resources>
    <string name="app_name">CragMapper</string>
    <string name="action_settings">Settings</string>
    <string name="node_cancel">Cancel</string>
    <string name="save_node">Save Node</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="save_node_order">Save Ordering</string>
    <string name="save_crag">Save Crag Basics</string>
    <string name="crag_image">Crag Image</string>
    <string name="route_image">Route Image</string>
    <string name="route_name">Route Name</string>
    <string name="crag_image_button_desc">Crag Image</string>

    <string name="edit_crag_actionbar">Add points to route </string>
    <string name="edit_crag">Edit</string>
    <string name="delete_crag">Delete</string>
    <string name="back_save_nodes">Back</string>
    <string name="next_save_nodes">Order Nodes</string>
    <string name="finish_crag">Finish</string>

    <string name="title_activity_main_activity">Your Crags</string>
    <string name="title_activity_crag_view">Crag View</string>
    <string name="title_activity_order_nodes">Order route nodes</string>
    <string name="title_activity_edit_crag_image">EditCragImageActivity</string>
    <string name="title_activity_edit_node_order">EditNodeOrderActivity</string>
    <string name="title_activity_build_crag">BuildCragActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
