<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crag_list_title"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crag_list_rating"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/crag_list_image"
        android:contentDescription="@string/crag_image"/>

    <Button
        android:id="@+id/crag_list_edit_button"
        android:text="@string/edit_crag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/crag_list_image"
        android:layout_toStartOf="@+id/crag_list_image" />

    <Button
        android:text="@string/delete_crag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crag_list_edit_button"
        android:layout_alignLeft="@+id/crag_list_edit_button"
        android:layout_alignStart="@+id/crag_list_edit_button"
        android:id="@+id/crag_list_delete_button" />

</RelativeLayout>